--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 		<title>Шаровый хостинг</title>
 	</head>
 	<body style="text-align: center;">
-		<h1 style="display: inline-block; margin-top: 20%;">Free hosting from github.io for Guzenkova Yulia))</h1>
+		<h1 style="display: inline-block; margin-top: 20%;">It can be the site</h1>
 	</body>
 </html>
