--- a/index.html
+++ b/index.html
@@ -5,9 +5,35 @@
 		<link rel="stylesheet" href="style.css" media="all"/>
 		<link rel="shortcut icon" href="icon/favicon.png" type="image/png">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Шаровый хостинг</title>
+		<title>Александр Ягодин</title>
 	</head>
-	<body style="text-align: center;">
-		<h1 style="display: inline-block; margin-top: 20%;">It can be the site</h1>
+		<div class="main">
+			<header>
+				<div class="left">
+					<p>Personal information</p>
+					<br>
+					<p>first name / surname</p>
+					<p>cellphone</p>
+					<p>email</p>
+					<p>city</p>
+					<br>
+					<p>desired position</p>
+				</div>
+				<div class="right">
+					<br>
+					<br>
+					<br>
+					<p>Aleksandr Yagodin</p>
+					<p>063 158 33 04</p>
+					<p>rush.glider@gmail.com</p>
+					<p>Kiev, Ukraine, 08131</p>
+					<br>
+					<p>Junior Front-end Developer</p>
+				</div>
+				<div class="avatar">
+					
+				</div>
+			</header>
+		</div>
 	</body>
 </html>
