--- a/index.html
+++ b/index.html
@@ -2,38 +2,109 @@
 <html lang="ru">
 	<head>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="style.css" media="all"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="css/normalize.css" media="all"/>
+		<link rel="stylesheet" href="css/bootstrap.css" media="all"/>		
+		<link rel="stylesheet" href="css/style.css" media="all"/>
 		<link rel="shortcut icon" href="icon/favicon.png" type="image/png">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Александр Ягодин</title>
+
+		<title>Alexandr Yagodin</title>
 	</head>
-		<div class="main">
+	<body>
+		<div class="container">
+			<div class="row">
+				<div class="temp col-md-4 col-sm-4 col-xs-6">
+					<p class="right-side">1 value</p>
+					<p class="right-side">2 value</p>
+					<p class="right-side">3 value</p>
+				</div>
+				<div class="temp col-md-4 col-sm-4 col-xs-6">
+					<p class="left-side">1 answer</p>
+					<p class="left-side">2 answer</p>
+					<p class="left-side">3 answer</p>
+				</div>
+				<div class="temp col-md-4 col-sm-4 col-xs-12">
+					third block
+				</div>
+			</div>
+			<p>!</p>
+			<div class="row">
+	  			<div class="temp col-md-1">.col-md-1</div>
+	  			<div class="temp col-md-1">.col-md-1</div>
+	  			<div class="temp col-md-1">.col-md-1</div>
+	  			<div class="temp col-md-1">.col-md-1</div>
+	  			<div class="temp col-md-1">.col-md-1</div>
+	  			<div class="temp col-md-1">.col-md-1</div>
+	  			<div class="temp col-md-1">.col-md-1</div>
+	  			<div class="temp col-md-1">.col-md-1</div>
+	  			<div class="temp col-md-1">.col-md-1</div>
+	  			<div class="temp col-md-1">.col-md-1</div>
+	  			<div class="temp col-md-1">.col-md-1</div>
+	  			<div class="temp col-md-1">.col-md-1</div>
+		</div>
+		<div class="row">
+	  		<div class="temp col-md-8">.col-md-8</div>
+	  		<div class="temp col-md-4">.col-md-4</div>
+		</div>
+		<div class="row">
+	  		<div class="temp col-md-4">.col-md-4</div>
+	  		<div class="temp col-md-4">.col-md-4</div>
+	  		<div class="temp col-md-4">.col-md-4</div>
+		</div>
+		<div class="row">
+	  		<div class="temp col-md-6">.col-md-6</div>
+	  		<div class="temp col-md-6">.col-md-6</div>
+		</div>
+	</div>
+
+	<!-- Stack the columns on mobile by making one full-width and the other half-width -->
+<div class="row">
+  <div class="col-xs-12 col-md-8">.col-xs-12 .col-md-8</div>
+  <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+</div>
+
+<!-- Columns start at 50% wide on mobile and bump up to 33.3% wide on desktop -->
+<div class="row">
+  <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+  <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+  <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+</div>
+
+<!-- Columns are always 50% wide, on mobile and desktop -->
+<div class="row">
+  <div class="col-xs-6">.col-xs-6</div>
+  <div class="col-xs-6">.col-xs-6</div>
+</div>
+
+<!-- 		<div class="wrap">
 			<header>
 				<div class="left">
-					<p>Personal information</p>
+					<p class="question-field">Personal information</p>
 					<br>
-					<p>first name / surname</p>
-					<p>cellphone</p>
-					<p>email</p>
-					<p>city</p>
+					<p class="question-field">first name / surname</p>
+					<p class="question-field">cellphone</p>
+					<p class="question-field">email</p>
+					<p class="question-field">city</p>
 					<br>
-					<p>desired position</p>
+					<p class="question-field">desired position</p>
 				</div>
 				<div class="right">
 					<br>
 					<br>
+					<p class="answer">Aleksandr Yagodin</p>
+					<p class="answer">063 158 33 04</p>
+					<p class="answer">rush.glider@gmail.com</p>
+					<p class="answer">Kiev, Ukraine, 08131</p>
 					<br>
-					<p>Aleksandr Yagodin</p>
-					<p>063 158 33 04</p>
-					<p>rush.glider@gmail.com</p>
-					<p>Kiev, Ukraine, 08131</p>
-					<br>
-					<p>Junior Front-end Developer</p>
+					<p class="answer">Junior Front-end Developer</p>
 				</div>
 				<div class="avatar">
-					
+					<img src="img/avatar.png" alt="Smiling face">
 				</div>
 			</header>
-		</div>
+		</div> -->
+
+
 	</body>
 </html>
