--- a/hire-me.html
+++ b/hire-me.html
@@ -84,7 +84,7 @@
 		</form>
 	</div>
 	<footer>
-		<div>© 2014 <b>SEFolio</b>/ Design by <b>Eftakher Alam</b></div>
+		<div>© 2018 <b>Portfolio</b>/ Created by <b>ALEXandr Yagodin</b></div>
 	</footer>
 </body>
 </html>
