--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="style.css" media="all">
+	<link rel="stylesheet" href="css/style.css" media="all">
 	<link href='https://fonts.googleapis.com/css?family=Asap' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,6 @@
 				<a href="index.html">
 					<span><b>se</b>folio</span>
 				</a>
-
 			</div>
 			<div class="salutation">
 				<input type="radio" name="tabs" id="tab-1" checked>
@@ -39,25 +38,25 @@
 			<i class="btn-drop-menu vip"></i>
 			<div class="menu">
 				<div class="btn-menu design">
-					<a href="#">
+					<a href="#block-1" >
 						<span class="title">.UI/UX Design</span>
 						<span class="read-more">Read more</span>
 					</a>
 				</div>
 				<div class="btn-menu identiny">
-					<a href="#">
+					<a href="#block-2">
 						<span class="title">.Branding Identity</span>
 						<span class="read-more">Read more</span>
 					</a>
 				</div>
 				<div class="btn-menu idea">
-					<a href="#">
+					<a href="#block-3">
 						<span class="title">.Creative Idea</span>
 						<span class="read-more">Read more</span>
 					</a>
 				</div>
 				<div class="btn-menu photography">
-					<a href="#">
+					<a href="#block-4">
 						<span class="title">.Photography</span>
 						<span class="read-more">Read more</span>
 					</a>
@@ -65,11 +64,18 @@
 			</div>
 		</div>
 	</div>
-	<div class="wrap-1300">
+
+	<!-- Greeting -->
+
+	<div id="block-1" class="wrap-1300">
 		<div class="about">
 			<div class="text-about">
 				<h2>Hi! I’m <b>ALEX</b></h2>
-				<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis.</div>
+				<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+					 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+					 Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+					 Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					 Sed ut perspiciatis.</div>
 				<a href="my-work.html" class="button">My Work</a>
 				<a href="hire-me.html" class="button">Hire Me</a>
 			</div>
@@ -77,7 +83,11 @@
 				<img src="img/autor.png" alt="autor">
 			</div>
 		</div>
-		<div class="container-3 wrap-960">
+
+
+<!-- My servicess -->
+
+		<div id="block-2" class="container-3 wrap-960">
 			<div class="servicess">
 				<h2>My <b>Servicess</b></h2>
 				<span>Showcase services in a spacious &amp; clean manner</span>
@@ -101,21 +111,98 @@
 				</div>
 			</div>
 		</div>
+	</div>
+
+
+<!-- Tecnology -->
+
 		<div class="container-4 wrap-1300">
 			<div class="skills-slider">
 				<h4>Some awesome companies we've had the pleasure to work with</h4>
 				<a href="#" class="btn-left"></a>
-				<a href="#" class="envato"></a>
-				<a href="#" class="epils"></a>
-				<a href="#" class="less"></a>
-				<a href="#" class="jquery"></a>
-				<a href="#" class="sass"></a>
+				<a href="#" class="skills-logo envato"></a>
+				<a href="#" class="skills-logo epils"></a>
+				<a href="#" class="skills-logo less"></a>
+				<a href="#" class="skills-logo jquery"></a>
+				<a href="#" class="skills-logo sass"></a>
 				<a href="#" class="btn-right"></a>
 			</div>
 		</div>
+
+<!-- Portfolio -->
+
+	<div id="block-3" class="works">
+		<div class="my-work-960">
+
+			<div class="my-work-head">
+				<div>Check out some of my <p><b>latest</b> and <b>greatest</b> projects</p></div>
+				<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+					Ut enim ad minim veniam, quis nostrud </span>
+			</div>
+
+			<div class="wrap-work">
+				<a href="#" class="my-work">
+					<div><img src="img/example-1.png" alt="Work-1"/></div>
+						<span>OneTitle Logo Branding</span>
+				</a>
+				<a href="#" class="my-work">
+					<div><img src="img/example-2.png" alt="Work-2"/></div>
+					<span>OneTitle Full Branding</span>
+				</a>
+				<a href="#" class="my-work">
+					<div><img src="img/example-3.png" alt="Work-3"/></div>
+					<span>Splash Wines Branding</span>
+				</a>
+				<a href="#" class="my-work">
+					<div><img src="img/example-4.png" alt="Work-4"/></div>
+					<span>Beautifull World</span>
+				</a>
+				<a href="#" class="my-work">
+					<div><img src="img/example-5.png" alt="Work-5"/></div>
+					<span>Personal Web Design</span>
+				</a>
+				<a href="#" class="my-work">
+					<div><img src="img/example-6.png" alt="Work-6"/></div>
+					<span>Business Plan Design</span>
+				</a>
+			</div>
+		</div>
+
+		<div class="quote">
+			<div>“Loved the graphics very much and so happy I found this very talented designer.
+			He pays attention to detail and prompt. Work we delivered before deadline. ”
+			<p><b>Shauna Graham,</b> Alo Group</p>
+		</div>
+		</div>
+
 	</div>
+
+<!-- Contacts -->
+
+	<div id="block-4" class="inputs">
+		<div class="messadge">
+			<span>Have any <b>project!</b></span>
+			<p>Just send me a message I will help you and make you smile</p>
+		</div>
+		<div class="networks">
+			<a href="https://www.facebook.com/alexandr.yagodin.7" class="face-book"></a>
+			<a href="https://www.instagram.com/alexandr_yagodin/?hl=ru" class="instagram"></a>
+			<a href="https://www.twitter.com" class="twitter"></a>
+			<a href="#" class="world"></a>
+		</div>
+		<form action="send" id="messedge">
+			<input class="inp-short" type="text" name="first-name" id="f-name" placeholder="First Name">
+			<input class="inp-short" type="text" name="last-name" id="l-name" placeholder="Last Name">
+			<input class="inp-short" type="text" name="your-email" id="y-email" placeholder="Your Email">
+			<input class="inp-short" type="text" name="project-name" id="p-name" placeholder="Project Name">
+			<div><input class="inp-long" type="text" name="your-messadge" id="y-messadge" placeholder="Your Message......."></div>
+		</form>
+	</div>
+
+
+
 	<footer>
-		<div>©2018<b>Portfolio</b>/Created by ALEXander Yagodin<b></b></div>
+		<div>©2018<b> Portfolio </b>/ Created by ALEXander Yagodin<b></b></div>
 	</footer>
 </body>
 </html>
