--- a/index.html
+++ b/index.html
@@ -1,208 +1,201 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" href="css/style.css" media="all">
-	<link href='https://fonts.googleapis.com/css?family=Asap' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>ALEX portfolio</title>
-</head>
-<body>
-	<div class="header">
-		<div class="head">
-			<div class="logo">
-				<a href="index.html">
-					<span><b>se</b>folio</span>
-				</a>
+	<head>
+		<meta charset="UTF-8">
+		<link rel="stylesheet" href="css/style.css" media="all">
+		<link href='https://fonts.googleapis.com/css?family=Asap' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>ALEX portfolio</title>
+	</head>
+	<body>
+		<div class="header">
+			<div class="head">
+				<div class="logo">
+					<a class="link"  href="index.html">
+						<span><b>alex</b>'s portfolio</span>
+					</a>
+					<div id="language-selector" class="language-selector">
+						<a id="us" class="link" href="#">EN </a>
+						<a class="link">/</a>
+						<a id="ua" class="link" href="#">UA </a>
+						<a class="link">/</a>
+						<a id="ru" class="link" href="#">RU </a>
+					</div>
+				</div>
+				<div id="greetings" class="salutation"></div>
+				</div>
+				<i class="btn-drop-menu vip"></i>
+				<div class="menu">
+					<div class="btn-menu design">
+						<a href="#block-1" >
+							<span class="title">.UI/UX Design</span>
+							<span class="read-more">Read more</span>
+						</a>
+					</div>
+					<div class="btn-menu identiny">
+						<a href="#block-2">
+							<span class="title">.Branding Identity</span>
+							<span class="read-more">Read more</span>
+						</a>
+					</div>
+					<div class="btn-menu idea">
+						<a href="#block-3">
+							<span class="title">.Creative Idea</span>
+							<span class="read-more">Read more</span>
+						</a>
+					</div>
+					<div class="btn-menu photography">
+						<a href="#block-4">
+							<span class="title">.Photography</span>
+							<span class="read-more">Read more</span>
+						</a>
+					</div>
+				</div>
 			</div>
-			<div class="salutation">
-				<input type="radio" name="tabs" id="tab-1" checked>
-				<input type="radio" name="tabs" id="tab-2">
-				<input type="radio" name="tabs" id="tab-3">
-				<div class="labels">
-					<label class="label-1" for="tab-1"></label>
-					<label class="label-2" for="tab-2"></label>
-					<label class="label-3" for="tab-3"></label>
+		</div>
+
+		<!-- Greeting -->
+
+		<div id="block-1" class="wrap-1300">
+			<div class="about">
+				<div class="text-about">
+					<h2>Hi! I’m <b>ALEX</b></h2>
+					<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+						 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+						 Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+						 Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						 Sed ut perspiciatis.</div>
+					<a href="my-work.html" class="button">My Work</a>
+					<a href="hire-me.html" class="button">Hire Me</a>
 				</div>
-				<div class="text for-tab-1">Hello,<b> I'm Alex</b>
-					<p><b>A FrontEnd</b> developer</p>
-				</div>
-				<div class="text for-tab-2">I <b>glad to see you</b>
-					<p>on my folio website</p>
-				</div>
-				<div class="text for-tab-3">I hope that <b>I can be</b>
-					<p><b>useful</b> to you</p>
+				<div class="foto-about">
+					<img src="img/autor.png" alt="autor">
 				</div>
 			</div>
-			<i class="btn-drop-menu vip"></i>
-			<div class="menu">
-				<div class="btn-menu design">
-					<a href="#block-1" >
-						<span class="title">.UI/UX Design</span>
-						<span class="read-more">Read more</span>
+
+
+	<!-- My servicess -->
+
+			<div id="block-2" class="container-3 wrap-960">
+				<div class="servicess">
+					<h2>My <b>Servicess</b></h2>
+					<span>Showcase services in a spacious &amp; clean manner</span>
+				</div>
+				<div class="box-skills">
+					<div class="skill development">
+						<h3>Web Development</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim.</p>
+					</div>
+					<div class="skill w-design">
+						<h3>Web Design</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim.</p>
+					</div>
+					<div class="skill construction">
+						<h3>Web Construction</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim.</p>
+					</div>
+					<div class="skill solutions">
+						<h3>Creative Solutions</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+	<!-- Tecnology -->
+
+			<div class="container-4 wrap-1300">
+				<div class="skills-slider">
+					<h4>Some awesome companies we've had the pleasure to work with</h4>
+					<a href="#" class="btn-left"></a>
+					<a href="#" class="skills-logo envato"></a>
+					<a href="#" class="skills-logo epils"></a>
+					<a href="#" class="skills-logo less"></a>
+					<a href="#" class="skills-logo jquery"></a>
+					<a href="#" class="skills-logo sass"></a>
+					<a href="#" class="btn-right"></a>
+				</div>
+			</div>
+
+	<!-- Portfolio -->
+
+		<div id="block-3" class="works">
+			<div class="my-work-960">
+
+				<div class="my-work-head">
+					<div>Check out some of my <p><b>latest</b> and <b>greatest</b> projects</p></div>
+					<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+						Ut enim ad minim veniam, quis nostrud </span>
+				</div>
+
+				<div class="wrap-work">
+					<a href="#" class="my-work">
+						<div><img src="img/example-1.png" alt="Work-1"/></div>
+							<span>OneTitle Logo Branding</span>
+					</a>
+					<a href="#" class="my-work">
+						<div><img src="img/example-2.png" alt="Work-2"/></div>
+						<span>OneTitle Full Branding</span>
+					</a>
+					<a href="#" class="my-work">
+						<div><img src="img/example-3.png" alt="Work-3"/></div>
+						<span>Splash Wines Branding</span>
+					</a>
+					<a href="#" class="my-work">
+						<div><img src="img/example-4.png" alt="Work-4"/></div>
+						<span>Beautifull World</span>
+					</a>
+					<a href="#" class="my-work">
+						<div><img src="img/example-5.png" alt="Work-5"/></div>
+						<span>Personal Web Design</span>
+					</a>
+					<a href="#" class="my-work">
+						<div><img src="img/example-6.png" alt="Work-6"/></div>
+						<span>Business Plan Design</span>
 					</a>
 				</div>
-				<div class="btn-menu identiny">
-					<a href="#block-2">
-						<span class="title">.Branding Identity</span>
-						<span class="read-more">Read more</span>
-					</a>
-				</div>
-				<div class="btn-menu idea">
-					<a href="#block-3">
-						<span class="title">.Creative Idea</span>
-						<span class="read-more">Read more</span>
-					</a>
-				</div>
-				<div class="btn-menu photography">
-					<a href="#block-4">
-						<span class="title">.Photography</span>
-						<span class="read-more">Read more</span>
-					</a>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<!-- Greeting -->
-
-	<div id="block-1" class="wrap-1300">
-		<div class="about">
-			<div class="text-about">
-				<h2>Hi! I’m <b>ALEX</b></h2>
-				<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-					 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-					 Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-					 Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-					 Sed ut perspiciatis.</div>
-				<a href="my-work.html" class="button">My Work</a>
-				<a href="hire-me.html" class="button">Hire Me</a>
-			</div>
-			<div class="foto-about">
-				<img src="img/autor.png" alt="autor">
-			</div>
-		</div>
-
-
-<!-- My servicess -->
-
-		<div id="block-2" class="container-3 wrap-960">
-			<div class="servicess">
-				<h2>My <b>Servicess</b></h2>
-				<span>Showcase services in a spacious &amp; clean manner</span>
-			</div>
-			<div class="box-skills">
-				<div class="skill development">
-					<h3>Web Development</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim.</p>
-				</div>
-				<div class="skill w-design">
-					<h3>Web Design</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim.</p>
-				</div>
-				<div class="skill construction">
-					<h3>Web Construction</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim.</p>
-				</div>
-				<div class="skill solutions">
-					<h3>Creative Solutions</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim.</p>
-				</div>
-			</div>
-		</div>
-	</div>
-
-
-<!-- Tecnology -->
-
-		<div class="container-4 wrap-1300">
-			<div class="skills-slider">
-				<h4>Some awesome companies we've had the pleasure to work with</h4>
-				<a href="#" class="btn-left"></a>
-				<a href="#" class="skills-logo envato"></a>
-				<a href="#" class="skills-logo epils"></a>
-				<a href="#" class="skills-logo less"></a>
-				<a href="#" class="skills-logo jquery"></a>
-				<a href="#" class="skills-logo sass"></a>
-				<a href="#" class="btn-right"></a>
-			</div>
-		</div>
-
-<!-- Portfolio -->
-
-	<div id="block-3" class="works">
-		<div class="my-work-960">
-
-			<div class="my-work-head">
-				<div>Check out some of my <p><b>latest</b> and <b>greatest</b> projects</p></div>
-				<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-					Ut enim ad minim veniam, quis nostrud </span>
 			</div>
 
-			<div class="wrap-work">
-				<a href="#" class="my-work">
-					<div><img src="img/example-1.png" alt="Work-1"/></div>
-						<span>OneTitle Logo Branding</span>
-				</a>
-				<a href="#" class="my-work">
-					<div><img src="img/example-2.png" alt="Work-2"/></div>
-					<span>OneTitle Full Branding</span>
-				</a>
-				<a href="#" class="my-work">
-					<div><img src="img/example-3.png" alt="Work-3"/></div>
-					<span>Splash Wines Branding</span>
-				</a>
-				<a href="#" class="my-work">
-					<div><img src="img/example-4.png" alt="Work-4"/></div>
-					<span>Beautifull World</span>
-				</a>
-				<a href="#" class="my-work">
-					<div><img src="img/example-5.png" alt="Work-5"/></div>
-					<span>Personal Web Design</span>
-				</a>
-				<a href="#" class="my-work">
-					<div><img src="img/example-6.png" alt="Work-6"/></div>
-					<span>Business Plan Design</span>
-				</a>
+			<div class="quote">
+				<div>“Loved the graphics very much and so happy I found this very talented designer.
+				He pays attention to detail and prompt. Work we delivered before deadline. ”
+				<p><b>Shauna Graham,</b> Alo Group</p>
 			</div>
+			</div>
+
 		</div>
 
-		<div class="quote">
-			<div>“Loved the graphics very much and so happy I found this very talented designer.
-			He pays attention to detail and prompt. Work we delivered before deadline. ”
-			<p><b>Shauna Graham,</b> Alo Group</p>
+	<!-- Contacts -->
+
+		<div id="block-4" class="inputs">
+			<div class="messadge">
+				<span>Have any <b>project!</b></span>
+				<p>Just send me a message I will help you and make you smile</p>
+			</div>
+			<div class="networks">
+				<a href="https://www.facebook.com/alexandr.yagodin.7" class="face-book"></a>
+				<a href="https://www.instagram.com/alexandr_yagodin/?hl=ru" class="instagram"></a>
+				<a href="https://www.twitter.com" class="twitter"></a>
+				<a href="#" class="world"></a>
+			</div>
+			<form action="send" id="messedge">
+				<input class="inp-short" type="text" name="first-name" id="f-name" placeholder="First Name">
+				<input class="inp-short" type="text" name="last-name" id="l-name" placeholder="Last Name">
+				<input class="inp-short" type="text" name="your-email" id="y-email" placeholder="Your Email">
+				<input class="inp-short" type="text" name="project-name" id="p-name" placeholder="Project Name">
+				<div><input class="inp-long" type="text" name="your-messadge" id="y-messadge" placeholder="Your Message......."></div>
+			</form>
 		</div>
-		</div>
 
-	</div>
+		<footer>
+			<div>©2018<b> Portfolio </b>/ Created by ALEXander Yagodin<b></b></div>
+		</footer>
+		<script src="js/content.js"></script>
+		<script src="js/template.js"></script>
+		<script src="js/services.js"></script>
+		<script src="js/main.js"></script>
 
-<!-- Contacts -->
-
-	<div id="block-4" class="inputs">
-		<div class="messadge">
-			<span>Have any <b>project!</b></span>
-			<p>Just send me a message I will help you and make you smile</p>
-		</div>
-		<div class="networks">
-			<a href="https://www.facebook.com/alexandr.yagodin.7" class="face-book"></a>
-			<a href="https://www.instagram.com/alexandr_yagodin/?hl=ru" class="instagram"></a>
-			<a href="https://www.twitter.com" class="twitter"></a>
-			<a href="#" class="world"></a>
-		</div>
-		<form action="send" id="messedge">
-			<input class="inp-short" type="text" name="first-name" id="f-name" placeholder="First Name">
-			<input class="inp-short" type="text" name="last-name" id="l-name" placeholder="Last Name">
-			<input class="inp-short" type="text" name="your-email" id="y-email" placeholder="Your Email">
-			<input class="inp-short" type="text" name="project-name" id="p-name" placeholder="Project Name">
-			<div><input class="inp-long" type="text" name="your-messadge" id="y-messadge" placeholder="Your Message......."></div>
-		</form>
-	</div>
-
-
-
-	<footer>
-		<div>©2018<b> Portfolio </b>/ Created by ALEXander Yagodin<b></b></div>
-	</footer>
-</body>
+	</body>
 </html>
